--- a/finance.ipynb
+++ b/finance.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "from utils.read_file import *\n",
-    "from utils.model_tool import *"
+    "from utils.model_tool import *\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from utils.query_handler import extract_time"
    ]
   },
   {
@@ -40,11 +42,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from huggingface_hub import snapshot_download\n",
+    "import re\n",
     "\n",
-    "# # 下載模型到指定路徑\n",
-    "# local_model_path = \"./models/bge-m3\"\n",
-    "# snapshot_download(repo_id=\"BAAI/bge-m3\", revision=\"main\", local_dir=local_model_path)"
+    "\n",
+    "chinese_num = ['○', '一', '二', '三', '四', '五', '六', '七', '八', '九']\n",
+    "\n",
+    "def get_years(time_data: list[int]):\n",
+    "    years = []\n",
+    "    for year in time_data[0]:\n",
+    "        years.append(year)\n",
+    "        char_count = 0\n",
+    "        chinese_year = \"\"\n",
+    "        while year[char_count] != '年':\n",
+    "            chinese_year += chinese_num[int(year[char_count])]\n",
+    "            char_count += 1\n",
+    "        years.append(chinese_year + '年')\n",
+    "    return years\n",
+    "\n",
+    "def get_valid_chunk(chunks: list[str], years: list[str]) -> list:\n",
+    "    valid_chunks = []\n",
+    "\n",
+    "\n",
+    "    pattern = r\"|\".join(years)\n",
+    "    for chunk in chunks:\n",
+    "        if re.search(pattern, chunk):\n",
+    "            valid_chunks.append(chunk)\n",
+    "\n",
+    "    return valid_chunks"
    ]
   },
   {
@@ -53,36 +77,100 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\weiso131\\anaconda3\\envs\\rag\\Lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from tqdm.autonotebook import tqdm, trange\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"三—'重大或有負債及未認列之合約承諾\\n除已於其他附註所述者外，合併公司於資產負債表日重大未認列\\n之合約事項如下：\\n111年9月30日110年12月31日110年9月30日\\n購置不動產、廠房及設備$1$1$1\\n三二'具重大影響之外幣資產及負債資訊\\n以下資訊係按合併公司各個體功能性貨幣以外之外幣彙總表達，\\n所揭露之匯率係指該等外幣換算至功能性貨幣之匯率。具重大影響之\\n外幣資產及負債如下：\\n111年9月30日\\n外幣匯率帳面金額\\n金融資產\\n貨幣性項目\\n美金$11（美金：人民幣）$1\\n美金11（美金：新台幣）1\\n人民幣1,11（人民幣:新台幣）1\\n金融負債\\n貨帶性項目\\n美金11（美金：人民幣）1\\n美金11（美金：新台幣）1\\n人民幣11（人民幣:新台幣）1\\n110年12月31日\\n外幣匯率帳面金額\\n金融資產\\n貨幣性項目\\n美金$11（美金：人民幣）$1\\n美金11（美金：新台幣）1\\n人民幣11（人民幣：新台幣）1\\n金融負債\\n貨幣性項目\\n美金11（美金：人民幣）1\\n美金11（美金：新台幣）1\\n人民幣11（人民幣：新台幣）1\\n1-\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sentence_transformers import SentenceTransformer\n",
+    "already_read = [\"\" for _ in range(10000)]\n",
     "\n",
-    "# 加載模型\n",
-    "embbeded_model = SentenceTransformer(\"./models/bge-m3\", device='cuda')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 驗證faq資料集的正確率"
+    "text = read_target_insurance_pdf(FINANCE_PATH, [10], already_read)[0]\n",
+    "\n",
+    "def remove_useless(text):\n",
+    "\n",
+    "    pattern = r\"(\\b\\d{1,3}(,\\d{3})+\\b)|(-?\\b\\d+(\\.\\d+)?\\b)\"\n",
+    "    text = re.sub(pattern, '1', text)\n",
+    "    text = str(text).replace(' ', '')\n",
+    "    return text\n",
+    "\n",
+    "remove_useless(text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of XLMRobertaModel were not initialized from the model checkpoint at BAAI/bge-reranker-v2-m3 and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from huggingface_hub import snapshot_download\n",
+    "\n",
+    "# # 下載模型到指定路徑\n",
+    "# local_model_path = \"./models/bge-m3\"\n",
+    "# snapshot_download(repo_id=\"BAAI/bge-m3\", revision=\"main\", local_dir=local_model_path)\n",
+    "\n",
+    "\n",
+    "# from transformers import AutoModel\n",
+    "\n",
+    "# reranker_model = 'BAAI/bge-reranker-v2-m3'\n",
+    "\n",
+    "# # 下載並儲存模型和 tokenizer 到本地\n",
+    "# model_path = './local_bge_reranker_model'\n",
+    "# model = AutoModel.from_pretrained(reranker_model)\n",
+    "\n",
+    "# # 將模型和 tokenizer 儲存到本地目錄\n",
+    "# model.save_pretrained(model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from FlagEmbedding import FlagReranker\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "# 加載模型\n",
+    "embbeded_model = SentenceTransformer(\"./models/bge-m3\", device='cuda')\n",
+    "\n",
+    "reranker = FlagReranker('BAAI/bge-reranker-v2-m3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def use_reranker(reranker, top10: list[str], query: str, all_predict):\n",
+    "    pairs = [[query, text] for text in top10]\n",
+    "    scores = reranker.compute_score(pairs)\n",
+    "    order = np.argsort(scores)[::-1]\n",
+    "    return all_predict[order[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "\n",
     "text_splitter = RecursiveCharacterTextSplitter(\n",
     "    chunk_size=500,  # 每段的目標長度\n",
     "    chunk_overlap=300  # 分段間的重疊字符數\n",
@@ -98,28 +186,33 @@
     "    already_read = [\"\" for _ in range(FILE_NUM)]\n",
     "\n",
     "    for i in range(50, 100):\n",
+    "        query = question[i][\"query\"]\n",
+    "        time_data = extract_time(query)\n",
+    "\n",
     "        src = np.array(question[i][\"source\"])\n",
     "        document = read_target_insurance_pdf(FINANCE_PATH, src, already_read)\n",
     "        tokens = []\n",
     "        chunk_real_index = []\n",
+    "\n",
+    "\n",
     "        for j in range(len(document)):\n",
-    "            text = document[j]\n",
+    "            text = remove_useless(document[j])\n",
     "\n",
-    "            if already_read[src[j]] == \"\":\n",
-    "                already_read[src[j]] = text\n",
     "\n",
-    "            chunks = text_splitter.split_text(text)\n",
-    "            tokens.extend(chunks)\n",
-    "            chunk_real_index.extend([j + k * 0 for k in range(len(chunks))])\n",
+    "            valid_chunks = text_splitter.split_text(text)\n",
     "\n",
-    "                \n",
-    "        chunk_real_index=np.array(chunk_real_index)\n",
+    "            tokens.extend(valid_chunks)\n",
+    "            chunk_real_index.extend([j + k * 0 for k in range(len(valid_chunks))])\n",
+    "\n",
+    "        \n",
+    "        chunk_real_index = np.array(chunk_real_index)\n",
     "\n",
     "\n",
     "        token_index, similarities = get_ans(embbeded_model, question[i], tokens, 10)\n",
     "        real_index = chunk_real_index[token_index]\n",
     "        all_predict = src[real_index]\n",
-    "        predict = all_predict[0]\n",
+    "        all_predict_text = [tokens[p] for p in token_index]\n",
+    "        predict = use_reranker(reranker, all_predict_text, query, all_predict)\n",
     "\n",
     "\n",
     "        if (predict == ans[\"ground_truths\"][i][\"retrieve\"]):\n",
@@ -144,36 +237,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "qid: 58, predict: 112, ans: 209\n",
-      "qid: 62, predict: 1024, ans: 591\n",
+      "qid: 53, predict: 145, ans: 351\n",
+      "qid: 54, predict: 520, ans: 612\n",
       "qid: 64, predict: 706, ans: 124\n",
       "qid: 67, predict: 837, ans: 1021\n",
       "qid: 69, predict: 545, ans: 981\n",
-      "qid: 70, predict: 298, ans: 490\n",
-      "qid: 75, predict: 178, ans: 71\n",
-      "qid: 79, predict: 912, ans: 65\n",
-      "qid: 82, predict: 838, ans: 831\n",
-      "qid: 86, predict: 525, ans: 189\n",
-      "qid: 90, predict: 761, ans: 710\n",
-      "qid: 93, predict: 321, ans: 660\n",
+      "qid: 86, predict: 658, ans: 189\n",
+      "qid: 94, predict: 350, ans: 699\n",
+      "qid: 98, predict: 439, ans: 692\n",
       "qid: 99, predict: 693, ans: 372\n",
-      "acc: 74.0 %\n",
-      "in rank 5: 98.0 %\n"
+      "acc: 82.0 %\n",
+      "in rank 5: 100.0 %\n"
      ]
     }
    ],
