Finance Use keyword to filt , acc 0.86

--- a/finance.ipynb
+++ b/finance.ipynb
@@ -38,11 +38,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "import jieba.analyse\n",
+    "\n",
+    "query = \"國巨2022年第三季關係人交易中，與關聯企業相關的銷貨收入是多少？\"\n",
+    "# 使用 jieba 提取關鍵詞（例如提取前5個關鍵詞）\n",
+    "\n",
+    "\n",
+    "def find_most_correct(top10: list[str], query: str, all_predict):\n",
+    "    keywords = jieba.analyse.extract_tags(query, topK=5)\n",
+    "    score = list(np.zeros(len(top10)))\n",
+    "    for k in keywords:\n",
+    "        for i in range(len(top10)):\n",
+    "            if re.search(k, top10[i]):\n",
+    "                score[i] += 1\n",
+    "    order = np.argsort(score)\n",
+    "    return all_predict[order[0]]\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "\n",
     "chinese_num = ['○', '一', '二', '三', '四', '五', '六', '七', '八', '九']\n",
@@ -73,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +108,7 @@
        "\"三—'重大或有負債及未認列之合約承諾\\n除已於其他附註所述者外，合併公司於資產負債表日重大未認列\\n之合約事項如下：\\n111年9月30日110年12月31日110年9月30日\\n購置不動產、廠房及設備$1$1$1\\n三二'具重大影響之外幣資產及負債資訊\\n以下資訊係按合併公司各個體功能性貨幣以外之外幣彙總表達，\\n所揭露之匯率係指該等外幣換算至功能性貨幣之匯率。具重大影響之\\n外幣資產及負債如下：\\n111年9月30日\\n外幣匯率帳面金額\\n金融資產\\n貨幣性項目\\n美金$11（美金：人民幣）$1\\n美金11（美金：新台幣）1\\n人民幣1,11（人民幣:新台幣）1\\n金融負債\\n貨帶性項目\\n美金11（美金：人民幣）1\\n美金11（美金：新台幣）1\\n人民幣11（人民幣:新台幣）1\\n110年12月31日\\n外幣匯率帳面金額\\n金融資產\\n貨幣性項目\\n美金$11（美金：人民幣）$1\\n美金11（美金：新台幣）1\\n人民幣11（人民幣：新台幣）1\\n金融負債\\n貨幣性項目\\n美金11（美金：人民幣）1\\n美金11（美金：新台幣）1\\n人民幣11（人民幣：新台幣）1\\n1-\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,12 +174,12 @@
     "# 加載模型\n",
     "embbeded_model = SentenceTransformer(\"./models/bge-m3\", device='cuda')\n",
     "\n",
-    "reranker = FlagReranker('BAAI/bge-reranker-v2-m3')"
+    "#reranker = FlagReranker('BAAI/bge-reranker-v2-m3')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +213,7 @@
     "\n",
     "    for i in range(50, 100):\n",
     "        query = question[i][\"query\"]\n",
-    "        time_data = extract_time(query)\n",
+    "\n",
     "\n",
     "        src = np.array(question[i][\"source\"])\n",
     "        document = read_target_insurance_pdf(FINANCE_PATH, src, already_read)\n",
@@ -212,7 +238,7 @@
     "        real_index = chunk_real_index[token_index]\n",
     "        all_predict = src[real_index]\n",
     "        all_predict_text = [tokens[p] for p in token_index]\n",
-    "        predict = use_reranker(reranker, all_predict_text, query, all_predict)\n",
+    "        predict = find_most_correct(all_predict_text, query, all_predict)\n",
     "\n",
     "\n",
     "        if (predict == ans[\"ground_truths\"][i][\"retrieve\"]):\n",
@@ -237,24 +263,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "qid: 51, predict: 899, ans: 162\n",
+      "qid: 52, predict: 1028, ans: 918\n",
       "qid: 53, predict: 145, ans: 351\n",
-      "qid: 54, predict: 520, ans: 612\n",
-      "qid: 64, predict: 706, ans: 124\n",
-      "qid: 67, predict: 837, ans: 1021\n",
-      "qid: 69, predict: 545, ans: 981\n",
-      "qid: 86, predict: 658, ans: 189\n",
-      "qid: 94, predict: 350, ans: 699\n",
-      "qid: 98, predict: 439, ans: 692\n",
-      "qid: 99, predict: 693, ans: 372\n",
-      "acc: 82.0 %\n",
-      "in rank 5: 100.0 %\n"
+      "qid: 54, predict: 969, ans: 612\n",
+      "qid: 56, predict: 1003, ans: 171\n",
+      "qid: 57, predict: 578, ans: 668\n",
+      "qid: 58, predict: 328, ans: 209\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutput_finance/\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m      4\u001b[0m     os\u001b[38;5;241m.\u001b[39mmakedirs(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutput_finance/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[43mvalidate_finance\u001b[49m\u001b[43m(\u001b[49m\u001b[43membbeded_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[13], line 39\u001b[0m, in \u001b[0;36mvalidate_finance\u001b[1;34m(embbeded_model, question)\u001b[0m\n\u001b[0;32m     33\u001b[0m     chunk_real_index\u001b[38;5;241m.\u001b[39mextend([j \u001b[38;5;241m+\u001b[39m k \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(valid_chunks))])\n\u001b[0;32m     36\u001b[0m chunk_real_index \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(chunk_real_index)\n\u001b[1;32m---> 39\u001b[0m token_index, similarities \u001b[38;5;241m=\u001b[39m \u001b[43mget_ans\u001b[49m\u001b[43m(\u001b[49m\u001b[43membbeded_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokens\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     40\u001b[0m real_index \u001b[38;5;241m=\u001b[39m chunk_real_index[token_index]\n\u001b[0;32m     41\u001b[0m all_predict \u001b[38;5;241m=\u001b[39m src[real_index]\n",
+      "File \u001b[1;32mc:\\Users\\weiso131\\Desktop\\AI cup 玉山銀行\\utils\\model_tool.py:5\u001b[0m, in \u001b[0;36mget_ans\u001b[1;34m(embedded_model, question_data, documents, k)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_ans\u001b[39m(embedded_model, question_data: \u001b[38;5;28mdict\u001b[39m, documents: \u001b[38;5;28mlist\u001b[39m, k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m----> 5\u001b[0m     document_ebeddings \u001b[38;5;241m=\u001b[39m \u001b[43membedded_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdocuments\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m# 使用者查詢\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     user_query \u001b[38;5;241m=\u001b[39m question_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquery\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\weiso131\\anaconda3\\envs\\rag\\Lib\\site-packages\\sentence_transformers\\SentenceTransformer.py:630\u001b[0m, in \u001b[0;36mSentenceTransformer.encode\u001b[1;34m(self, sentences, prompt_name, prompt, batch_size, show_progress_bar, output_value, precision, convert_to_numpy, convert_to_tensor, device, normalize_embeddings, **kwargs)\u001b[0m\n\u001b[0;32m    628\u001b[0m             \u001b[38;5;66;03m# fixes for #522 and #487 to avoid oom problems on gpu with large datasets\u001b[39;00m\n\u001b[0;32m    629\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m convert_to_numpy:\n\u001b[1;32m--> 630\u001b[0m                 embeddings \u001b[38;5;241m=\u001b[39m \u001b[43membeddings\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcpu\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    632\u001b[0m         all_embeddings\u001b[38;5;241m.\u001b[39mextend(embeddings)\n\u001b[0;32m    634\u001b[0m all_embeddings \u001b[38;5;241m=\u001b[39m [all_embeddings[idx] \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39margsort(length_sorted_idx)]\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
