--- a/finance.ipynb
+++ b/finance.ipynb
@@ -38,25 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "import jieba.analyse\n",
     "\n",
-    "query = \"國巨2022年第三季關係人交易中，與關聯企業相關的銷貨收入是多少？\"\n",
-    "# 使用 jieba 提取關鍵詞（例如提取前5個關鍵詞）\n",
     "\n",
-    "\n",
-    "def find_most_correct(top10: list[str], query: str, all_predict):\n",
-    "    keywords = jieba.analyse.extract_tags(query, topK=5)\n",
+    "def find_most_correct(top10: list[str], query: str, all_predict, similarity: np.array):\n",
+    "    keywords = jieba.analyse.extract_tags(query, topK=10)\n",
     "    score = list(np.zeros(len(top10)))\n",
-    "    for k in keywords:\n",
-    "        for i in range(len(top10)):\n",
+    "    for i in range(len(top10)):\n",
+    "        \n",
+    "        for k in keywords:\n",
+    "            if k.isdigit():\n",
+    "                continue\n",
     "            if re.search(k, top10[i]):\n",
     "                score[i] += 1\n",
-    "    order = np.argsort(score)\n",
+    "        score[i] *= similarity[i]\n",
+    "    order = np.argsort(score)[::-1]\n",
     "    return all_predict[order[0]]\n",
     "        \n",
     "\n"
@@ -130,18 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of XLMRobertaModel were not initialized from the model checkpoint at BAAI/bge-reranker-v2-m3 and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from huggingface_hub import snapshot_download\n",
     "\n",
@@ -166,7 +158,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from FlagEmbedding import FlagReranker\n",
     "from sentence_transformers import SentenceTransformer\n",
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +239,7 @@
     "        real_index = chunk_real_index[token_index]\n",
     "        all_predict = src[real_index]\n",
     "        all_predict_text = [tokens[p] for p in token_index]\n",
-    "        predict = find_most_correct(all_predict_text, query, all_predict)\n",
+    "        predict = find_most_correct(all_predict_text, query, all_predict, similarities)\n",
     "\n",
     "\n",
     "        if (predict == ans[\"ground_truths\"][i][\"retrieve\"]):\n",
@@ -263,34 +264,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n",
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\weiso131\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.438 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "qid: 51, predict: 899, ans: 162\n",
-      "qid: 52, predict: 1028, ans: 918\n",
-      "qid: 53, predict: 145, ans: 351\n",
-      "qid: 54, predict: 969, ans: 612\n",
-      "qid: 56, predict: 1003, ans: 171\n",
-      "qid: 57, predict: 578, ans: 668\n",
-      "qid: 58, predict: 328, ans: 209\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutput_finance/\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m      4\u001b[0m     os\u001b[38;5;241m.\u001b[39mmakedirs(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutput_finance/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[43mvalidate_finance\u001b[49m\u001b[43m(\u001b[49m\u001b[43membbeded_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[13], line 39\u001b[0m, in \u001b[0;36mvalidate_finance\u001b[1;34m(embbeded_model, question)\u001b[0m\n\u001b[0;32m     33\u001b[0m     chunk_real_index\u001b[38;5;241m.\u001b[39mextend([j \u001b[38;5;241m+\u001b[39m k \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(valid_chunks))])\n\u001b[0;32m     36\u001b[0m chunk_real_index \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(chunk_real_index)\n\u001b[1;32m---> 39\u001b[0m token_index, similarities \u001b[38;5;241m=\u001b[39m \u001b[43mget_ans\u001b[49m\u001b[43m(\u001b[49m\u001b[43membbeded_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokens\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     40\u001b[0m real_index \u001b[38;5;241m=\u001b[39m chunk_real_index[token_index]\n\u001b[0;32m     41\u001b[0m all_predict \u001b[38;5;241m=\u001b[39m src[real_index]\n",
-      "File \u001b[1;32mc:\\Users\\weiso131\\Desktop\\AI cup 玉山銀行\\utils\\model_tool.py:5\u001b[0m, in \u001b[0;36mget_ans\u001b[1;34m(embedded_model, question_data, documents, k)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_ans\u001b[39m(embedded_model, question_data: \u001b[38;5;28mdict\u001b[39m, documents: \u001b[38;5;28mlist\u001b[39m, k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m----> 5\u001b[0m     document_ebeddings \u001b[38;5;241m=\u001b[39m \u001b[43membedded_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdocuments\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m# 使用者查詢\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     user_query \u001b[38;5;241m=\u001b[39m question_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquery\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\weiso131\\anaconda3\\envs\\rag\\Lib\\site-packages\\sentence_transformers\\SentenceTransformer.py:630\u001b[0m, in \u001b[0;36mSentenceTransformer.encode\u001b[1;34m(self, sentences, prompt_name, prompt, batch_size, show_progress_bar, output_value, precision, convert_to_numpy, convert_to_tensor, device, normalize_embeddings, **kwargs)\u001b[0m\n\u001b[0;32m    628\u001b[0m             \u001b[38;5;66;03m# fixes for #522 and #487 to avoid oom problems on gpu with large datasets\u001b[39;00m\n\u001b[0;32m    629\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m convert_to_numpy:\n\u001b[1;32m--> 630\u001b[0m                 embeddings \u001b[38;5;241m=\u001b[39m \u001b[43membeddings\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcpu\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    632\u001b[0m         all_embeddings\u001b[38;5;241m.\u001b[39mextend(embeddings)\n\u001b[0;32m    634\u001b[0m all_embeddings \u001b[38;5;241m=\u001b[39m [all_embeddings[idx] \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39margsort(length_sorted_idx)]\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "qid: 59, predict: 639, ans: 632\n",
+      "qid: 64, predict: 706, ans: 124\n",
+      "qid: 72, predict: 497, ans: 204\n",
+      "qid: 80, predict: 386, ans: 213\n",
+      "qid: 86, predict: 757, ans: 189\n",
+      "qid: 94, predict: 481, ans: 699\n",
+      "qid: 97, predict: 579, ans: 282\n",
+      "acc: 86.0 %\n",
+      "in rank 5: 100.0 %\n"
      ]
     }
    ],
