--- a/answer_gernerate.ipynb
+++ b/answer_gernerate.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "\n",
     "from utils.read_file import *\n",
-    "from utils.model_tool import get_ans\n",
+    "from utils.model_tool import get_ans, use_reranker\n",
     "from utils.split_law import split_law_to_token\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\weiso131\\anaconda3\\envs\\rag\\Lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "from FlagEmbedding import FlagReranker\n",
+    "\n",
+    "# 加載模型\n",
+    "embbeded_model = SentenceTransformer(\"./models/bge-m3\", device='cuda')\n",
+    "#reranker = FlagReranker('BAAI/bge-reranker-v2-m3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +66,18 @@
     "        json.dump(output, f, indent=4, ensure_ascii=False)\n",
     "    print(f\"Predictions saved to {filename}\")\n",
     "\n",
-    "def gernerate_faq_ans(embbeded_model, question, i: int, results: list):\n",
+    "def gernerate_faq_ans(embbeded_model, question, i: int):\n",
     "    faq = read_json(FAQ_PATH)\n",
     "    document = read_target_faq(faq, question[i][\"source\"])\n",
     "    k_highest, _ = get_ans(embbeded_model, question[i], document)\n",
     "    predict = question[i][\"source\"][k_highest[0]]\n",
-    "    results.append({\"qid\": i + 1, \"retrieve\": predict})  # Modified\n",
+    "    \n",
+    "    return predict\n",
     "        \n",
     "    \n",
     "    \n",
     "\n",
-    "def gernerate_insurance_ans(embedded_model, question, i: int, results: list):\n",
-    "\n",
-    "    already_read = [\"\" for _ in range(FILE_NUM)]\n",
+    "def gernerate_insurance_ans(embedded_model, question, i: int, already_read: list[str]):\n",
     "\n",
     "    src = np.array(question[i][\"source\"])\n",
     "    document = read_target_insurance_pdf(INSURANCE_PATH, src, already_read)\n",
@@ -68,11 +92,357 @@
     "    chunk_real_index = np.array(chunk_real_index)\n",
     "    token_index, _ = get_ans(embedded_model, question[i], tokens, 10)\n",
     "    all_predict = chunk_real_index[token_index]\n",
-    "\n",
+    "    #all_predict_text = [tokens[ti] for ti in token_index]\n",
     "    predict = all_predict[0]\n",
     "\n",
-    "    results.append({\"qid\": i + 1, \"retrieve\": predict})  #modified\n",
+    "    return predict\n",
+    "\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import jieba.analyse\n",
+    "def remove_useless(text):\n",
+    "\n",
+    "    pattern = r\"(\\b\\d{1,3}(,\\d{3})+\\b)|(-?\\b\\d+(\\.\\d+)?\\b)\"\n",
+    "    text = re.sub(pattern, '1', text)\n",
+    "    text = str(text).replace(' ', '')\n",
+    "    return text\n",
+    "\n",
+    "def find_most_correct(top10: list[str], query: str, all_predict, similarity: np.array):\n",
+    "    keywords = jieba.analyse.extract_tags(query, topK=10)\n",
+    "    score = list(np.zeros(len(top10)))\n",
+    "    for i in range(len(top10)):\n",
+    "        \n",
+    "        for k in keywords:\n",
+    "            if k.isdigit():\n",
+    "                continue\n",
+    "            if re.search(k, top10[i]):\n",
+    "                score[i] += 1\n",
+    "        score[i] *= similarity[i]\n",
+    "    order = np.argsort(score)[::-1]\n",
+    "    return all_predict[order[0]]\n",
+    "\n",
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=500,  # 每段的目標長度\n",
+    "    chunk_overlap=300  # 分段間的重疊字符數\n",
+    ")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def gernerate_finance_ans(embbeded_model, question, i: int, already_read: list[str]):\n",
+    "\n",
+    "    query = question[i][\"query\"]\n",
+    "\n",
+    "\n",
+    "    src = np.array(question[i][\"source\"])\n",
+    "    document = read_target_insurance_pdf(FINANCE_PATH, src, already_read)\n",
+    "    tokens = []\n",
+    "    chunk_real_index = []\n",
+    "\n",
+    "\n",
+    "    for j in range(len(document)):\n",
+    "        text = remove_useless(document[j])\n",
+    "        valid_chunks = text_splitter.split_text(text)\n",
+    "        tokens.extend(valid_chunks)\n",
+    "        chunk_real_index.extend([src[j] for k in range(len(valid_chunks))])\n",
+    "\n",
+    "    \n",
+    "    chunk_real_index = np.array(chunk_real_index)\n",
+    "\n",
+    "    token_index, similarities = get_ans(embbeded_model, question[i], tokens, 10)\n",
+    "    all_predict = chunk_real_index[token_index]\n",
+    "    all_predict_text = [tokens[p] for p in token_index]\n",
+    "    predict = find_most_correct(all_predict_text, query, all_predict, similarities)\n",
+    "\n",
+    "    return predict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "already_read_insurance = [\"\" for _ in range(FILE_NUM)]\n",
+    "already_read_finance = [\"\" for _ in range(FILE_NUM)]\n",
+    "\n",
+    "question = read_json(QUESTION_PATH)[\"questions\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\weiso131\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.450 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n",
+      "100\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "116\n",
+      "117\n",
+      "118\n",
+      "119\n",
+      "120\n",
+      "121\n",
+      "122\n",
+      "123\n",
+      "124\n",
+      "125\n",
+      "126\n",
+      "127\n",
+      "128\n",
+      "129\n",
+      "130\n",
+      "131\n",
+      "132\n",
+      "133\n",
+      "134\n",
+      "135\n",
+      "136\n",
+      "137\n",
+      "138\n",
+      "139\n",
+      "140\n",
+      "141\n",
+      "142\n",
+      "143\n",
+      "144\n",
+      "145\n",
+      "146\n",
+      "147\n",
+      "148\n",
+      "149\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = []\n",
+    "for i in range(len(question)):\n",
+    "    category = question[i]['category']\n",
+    "    predict = 0\n",
+    "    if category == \"insurance\":\n",
+    "        predict = gernerate_insurance_ans(embbeded_model, question, i, already_read_insurance)\n",
+    "    elif category == \"finance\":\n",
+    "        predict = gernerate_finance_ans(embbeded_model, question, i, already_read_finance)\n",
+    "    elif category == \"faq\":\n",
+    "        predict = gernerate_faq_ans(embbeded_model, question, i)\n",
+    "    print(i + 1)\n",
+    "    results.append({\"qid\": i + 1, \"retrieve\": int(predict)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions saved to pred_retrieve.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_predictions_to_json(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qid: 2, predict: 258, ans: 428\n",
+      "qid: 4, predict: 179, ans: 186\n",
+      "qid: 50, predict: 555, ans: 78\n",
+      "qid: 59, predict: 639, ans: 632\n",
+      "qid: 64, predict: 706, ans: 124\n",
+      "qid: 72, predict: 497, ans: 204\n",
+      "qid: 80, predict: 386, ans: 213\n",
+      "qid: 86, predict: 757, ans: 189\n",
+      "qid: 94, predict: 481, ans: 699\n",
+      "qid: 97, predict: 579, ans: 282\n",
+      "qid: 109, predict: 234, ans: 283\n",
+      "qid: 135, predict: 399, ans: 28\n",
+      "0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check\n",
+    "\n",
+    "ans = read_json(ANS_PATH)['ground_truths']\n",
+    "pred_retrieve = read_json('pred_retrieve.json')['answers']\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "for i in range(len(ans)):\n",
+    "    if ans[i]['retrieve'] != pred_retrieve[i]['retrieve']:\n",
+    "        print(f\"qid: {i + 1}, predict: {pred_retrieve[i]['retrieve']}, ans: {ans[i]['retrieve']}\")\n",
+    "    else:\n",
+    "        correct += 1\n",
+    "    total += 1\n",
+    "print(correct / total)"
    ]
   },
   {
@@ -80,11 +450,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "results = []\n",
-    "\n",
-    "save_predictions_to_json(results)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
