--- a/answer_gernerate.ipynb
+++ b/answer_gernerate.ipynb
@@ -21,13 +21,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QUESTION_PATH = \"競賽資料集/dataset/preliminary/questions_example.json\"\n",
+    "\n",
     "\n",
     "INSURANCE_PATH = \"競賽資料集/reference/insurance\"\n",
     "FAQ_PATH = \"競賽資料集/reference/faq/pid_map_content.json\"\n",
     "ANS_PATH = \"競賽資料集/dataset/preliminary/ground_truths_example.json\"\n",
     "FINANCE_PATH = \"競賽資料集/reference/finance\"\n",
-    "FILE_NUM = 2000"
+    "FILE_NUM = 2000\n",
+    "\n",
+    "QUESTION_PATH = \"競賽資料集/dataset/preliminary/questions_example.json\"\n",
+    "QUESTION_PATH = \"questions_preliminary.json\""
    ]
   },
   {
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -196,179 +199,11 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\weiso131\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:555.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n",
       "Building prefix dict from the default dictionary ...\n",
       "Loading model from cache C:\\Users\\weiso131\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.450 seconds.\n",
+      "Loading model cost 0.468 seconds.\n",
       "Prefix dict has been built successfully.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n",
-      "150\n"
      ]
     }
    ],
@@ -383,13 +218,12 @@
     "        predict = gernerate_finance_ans(embbeded_model, question, i, already_read_finance)\n",
     "    elif category == \"faq\":\n",
     "        predict = gernerate_faq_ans(embbeded_model, question, i)\n",
-    "    print(i + 1)\n",
     "    results.append({\"qid\": i + 1, \"retrieve\": int(predict)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -432,17 +266,17 @@
    "source": [
     "#check\n",
     "\n",
-    "ans = read_json(ANS_PATH)['ground_truths']\n",
-    "pred_retrieve = read_json('pred_retrieve.json')['answers']\n",
-    "correct = 0\n",
-    "total = 0\n",
-    "for i in range(len(ans)):\n",
-    "    if ans[i]['retrieve'] != pred_retrieve[i]['retrieve']:\n",
-    "        print(f\"qid: {i + 1}, predict: {pred_retrieve[i]['retrieve']}, ans: {ans[i]['retrieve']}\")\n",
-    "    else:\n",
-    "        correct += 1\n",
-    "    total += 1\n",
-    "print(correct / total)"
+    "# ans = read_json(ANS_PATH)['ground_truths']\n",
+    "# pred_retrieve = read_json('pred_retrieve.json')['answers']\n",
+    "# correct = 0\n",
+    "# total = 0\n",
+    "# for i in range(len(ans)):\n",
+    "#     if ans[i]['retrieve'] != pred_retrieve[i]['retrieve']:\n",
+    "#         print(f\"qid: {i + 1}, predict: {pred_retrieve[i]['retrieve']}, ans: {ans[i]['retrieve']}\")\n",
+    "#     else:\n",
+    "#         correct += 1\n",
+    "#     total += 1\n",
+    "# print(correct / total)"
    ]
   },
   {
